# course_project_3

./: README.md  pyproject.toml
tests/: .coverage  test_operation.py
utils/: operation.py
