[tool.poetry]
name = "course-project-3-"
version = "0.1.0"
description = ""
authors = ["Alexandr Sinev <sir.sineow@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.4.4"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
